<resources>
    <string name="app_name">Dose Loop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque commodo eu ex sed ullamcorper.</string>
    <string name="donec">Donec interdum faucibus mi, eu eleifend tellus. Donec et dui pharetra, laoreet massa a, bibendum ex. Vivamus vehicula justo ac egestas maximus.</string>
    <string name="enter_phone">Aloita syöttämällä älydosetin puhelinnumero</string>
    <string name="submit_button">Jatka</string>
    <string name="zero">0</string>
    <string name="set_numbers">Ilmoitusten vastaanottajien asetukset</string>
    <string name="change">Vaihda</string>
    <string name="save">Tallenna</string>
    <string name="error_country_code">Syötä numero ilman maatunnusta! (esim. 040...)</string>
    <string name="error_too_long_number">Numero on liian pitkä! (max. 10 merkkiä)</string>
    <string name="error_too_long_text">Teksti on liian pitkä! (max. 30 merkkiä)</string>
    <string name="error_invalid_first_number">Varmista että ensimmäinen merkki on 0!</string>
    <string name="error_not_digit">Syötä pelkkiä numeroita!</string>
    <!-- Strings for Date and Time Fragment -->
    <string name="set_date_and_time">Aseta lääkkeenoton kellonaika ja päivä</string>
    <string name="set_day">Lääkkeiden otto päivä"</string>
    <string name="sent_button">Lähetä</string>
    <string name="delete_button">Poista</string>
    <string name="every_day">Joka päivä</string>
    <string name="day_after">Joka toinen</string>
    <string name="set_format">__:__</string>
    <string name="set_right_time">Syötä kellonaika muodossa 00:00</string>
    <string name="get_saved_phone_numbers">Tallennetut puhelinnumerot</string>
    <string name="get_phone_numbers_settings_sms">Tekstiviestin vastaanottavat puhelinnumerot</string>
    <string name="set_time_correct">Aseta kellonaika oikeaksi</string>
    <string name="get_medicine_times">Lääkkeiden ottoajat</string>
    <string name="get_signal_strength">Signaalin vahvuus</string>
    <string name="get_battery_level">Akun varaus</string>
    <string name="get_door_opening_times">Kolme edellistä ovenavausaikaa</string>
    <string name="check_device_settings">Laitteen nykyiset asetukset</string>
    <string name="cancel">Peru</string>
    <string name="accept">Hyväksy</string>
    <string name="change_device_number">Olet asettamassa älydosetin numeroksi %1$s. Hyväksy muutos?</string>
    <string name="change_number">Olet asettamassa %1$s. numeroksi %2$s. Hyväksy muutos?</string>
    <string name="change_number_info">Muutos maksaa liittymäkohtaisen tekstiviestin hinnan</string>
    <string name="off">Pois</string>
    <string name="on">Päällä</string>
    <string name="next_med">Seuraava lääkkeen otto</string>
    <string name="number1">1. Numero</string>
    <string name="number2">2. Numero</string>
    <string name="number3">3. Numero</string>
    <string name="number4">4. Numero</string>
    <string name="number5">5. Numero</string>
    <string name="notifications">Ilmoitukset</string>
    <string name="notify_changes">Seuraaville numeroille lisätään ilmoitukset: %1$s\n\nSeuraavilta numeroilta poistetaan ilmoitukset: %2$s</string>
    <string name="unsaved_changes">Sinulla on tallentamattomia muutoksia:\n\n%1$s\n\nSiirry pois siitä huolimatta?</string>
    <string name="move">Siirry</string>
    <string name="unsaved_disclaimer">Siirtyessä tallentamattomat muutokset menetetään</string>
    <string name="confirm_status_battery">Haluatko varmasti tarkistaa laitteen akkutason?</string>
    <string name="confirm_status_phone_numbers">Haluatko varmasti tarkistaa laitteeseen tallennetut puhelinnumerot?</string>
    <string name="confirm_status_numbers_settings">Haluatko varmasti tarkistaa puhelinnumerot jotka saavat tekstiviestihälytyksiä?</string>
    <string name="confirm_status_medicine_times">Haluatko varmasti tarkistaa lääkkeiden ottoajat?</string>
    <string name="confirm_status_signal_strength">Haluatko varmasti tarkistaa signaalin vahvuuden?</string>
    <string name="confirm_status_door_times">Haluatko varmasti tarkistaa ovenavausajat?</string>
    <string name="confirm_status_time_correct">Haluatko varmasti asettaa kellonajan?</string>
    <string name="locked">Lukittu</string>
    <string name="on_lock">Älydosetti on lukittu</string>
    <string name="unlocked">Älydosetti on auki</string>
    <string name="unknown_day">Tuntematon pv</string>
    <string name="set_today">Tänään</string>
    <string name="set_tomorrow">Huomenna</string>
    <string name="set_after_tomorrow">Huomisen jälkeen</string>
    <string name="set_on_day">Take medicine on %s</string>
    <string name="open">Auki</string>
    <string name="device_locked">Älydosetin lukitus</string>
    <string name="device_lock_info">Olet lukitsemassa älydosetin.\nHyväksy muutos?</string>
    <string name="device_open_info">Olet vapauttamassa älydosetin lukituksen.\nHyväksy muutos?</string>
    <string name="device_status_save_info">Tallenna muutokset?\n\n%1$s</string>
    <string name="device_owner_number">Älydosetin omistajan numero</string>
    <string name="device_number">Älydosetin numero</string>
    <string name="device_owner_reminder">Käyttäjän muistutus puhelimitse</string>
    <string name="alarm_off">Ei muistutusta</string>
    <string name="alarm_sms">Muistutus tekstiviestillä</string>
    <string name="alarm_call">Muistutus soittamalla</string>
    <string name="sms_call_alarm">Muist. soitolla ja viestillä</string>
    <string name="alarm_off_confirm">Haluatko varmasti poistaa muistutukset käyttäjän puhelimesta?</string>
    <string name="alarm_call_confirm">Haluatko varmasti lisätä muistutukset (soitto) käyttäjän puhelimeen?</string>
    <string name="alarm_sms_confirm">Haluatko varmasti lisätä muistutukset (tekstiviesti) käyttäjän puhelimeen?</string>
    <string name="device_info">Hae tietoja älydosetista</string>
    <string name="device_status_toolbar">Älydosetin ja käyttäjän asetukset</string>
    <string name="set_locked_on">Aseta älydosetin lukitus päälle?</string>
    <string name="set_locked_off">Poista älydosetin lukitus?</string>
    <string name="set_user_number">Olet asettamassa laitteen käyttäjän numeroksi %1$s. Hyväksy muutos?</string>
    <string name="set_meds_alert_text">Olet asettamassa unohtuneiden lääkkeiden hälytystekstiksi %1$s. Hyväksy muutos?</string>
    <string name="set_alarm_button_alert_text">Olet asettamassa hälytysnapin hälytystekstiksi %1$s. Hyväksy muutos?</string>
    <string name="set_fire_water_text">Olet asettamassa palovaroittimen/vesivuotovaihdin hälytystekstiksi %1$s. Hyväksy muutos?</string>
    <string name="set_meal_alarm_text">Olet asettamassa syömättä jääneiden aterioiden hälytystekstiksi %1$s. Hyväksy muutos?</string>
    <string name="set_alarm_texts_title">Hälytys tekstiviestin asetukset</string>
    <string name="medicine_alarm_hint">Ottamattomien lääkkeiden hälytysteksti</string>
    <string name="device_alarm_button_hint">Hälytysteksti hälytysnapista/RF painikkeesta</string>
    <string name="fire_alarm_hint">Palovaroitin/vesiovuotovahti hälytysteksti</string>
    <string name="meal_alarm_hint">Ruoka syömättä hälytysteksti</string>
    <string name="kuunnellaan">Kuunnellaan...</string>
    <string name="change_time">Olet asettamassa %1$s. lääkkeen ottoajaksi klo %2$s. Lääke otetaan %3$s. Hyväksy muutos?</string>
    <string name="every_day_small">joka päivä</string>
    <string name="every_other_day_small">joka toinen päivä</string>
    <string name="delete_time">Olet poistamassa %1$s. lääkkeen ottoajan laitteelta. Hyväksy muutos?</string>
    <string name="start">Aloitetaan!</string>
</resources>