<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/popup_container"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".activities.ConfirmDeviceLockChangesActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/popup_cancel_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/cancel_button"
        android:text="@string/cancel"
        android:textColor="?colorSecondaryVariant"
        app:layout_constraintBaseline_toBaselineOf="@+id/popup_confirm_button"
        app:layout_constraintEnd_toStartOf="@+id/popup_confirm_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/confirm_window_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/device_lock_info"
        android:textColor="?colorSecondaryVariant"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/popup_confirm_button"
        app:layout_constraintEnd_toEndOf="@+id/popup_confirm_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/popup_cancel_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirm_window_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/change_number_info"
        android:textSize="10sp"
        android:textStyle="bold"
        android:textColor="?colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_confirm_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/popup_confirm_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/confirm_button"
        android:text="@string/accept"
        android:textColor="?colorSecondaryVariant"
        app:layout_constraintBottom_toTopOf="@+id/confirm_window_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/popup_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/confirm_window_title" />

    <ImageButton
        android:id="@+id/confirm_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#00000000"
        app:tint="?colorSecondaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close" />
</androidx.constraintlayout.widget.ConstraintLayout>

